Fix warning and add a banner